[gd_scene load_steps=13 format=4 uid="uid://p1fa37oi3mua"]

[ext_resource type="Script" uid="uid://ctt22yxhgsb7c" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="Texture2D" uid="uid://bkrqnncsgvwdt" path="res://assets/spritesheets/Golden UI tileset.png" id="1_yqeox"]
[ext_resource type="Script" uid="uid://bj8m0fu718upq" path="res://scripts/pointer.gd" id="3_con2f"]
[ext_resource type="Texture2D" uid="uid://bainw1icohgyn" path="res://assets/spritesheets/Golden UI scales.png" id="3_mhnvy"]
[ext_resource type="Texture2D" uid="uid://duexdknmvq4bg" path="res://assets/spritesheets/golden-ui-bar.png" id="5_4ytvr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vjb58"]
texture = ExtResource("1_yqeox")
0:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:1/0 = 0
4:2/0 = 0
3:2/0 = 0
2:2/0 = 0
1:2/0 = 0
0:2/0 = 0
0:1/0 = 0
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_con2f"]
sources/2 = SubResource("TileSetAtlasSource_vjb58")

[sub_resource type="AtlasTexture" id="AtlasTexture_yqeox"]
atlas = ExtResource("1_yqeox")
region = Rect2(68, 52, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjb58"]
atlas = ExtResource("1_yqeox")
region = Rect2(56, 52, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_con2f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqeox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjb58")
}],
"loop": true,
"name": &"default",
"speed": 2.5
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4ytvr"]
texture = ExtResource("3_mhnvy")
texture_region_size = Vector2i(12, 16)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:2/0 = 0
1:2/0 = 0
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_g3eks"]
tile_size = Vector2i(12, 16)
sources/0 = SubResource("TileSetAtlasSource_4ytvr")

[node name="Menu" type="Node2D"]
script = ExtResource("1_vjb58")

[node name="Menu" type="TileMapLayer" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD9/wIAAgAAAAEAAAD+/wMAAgABAAEAAAD9/wMAAgAAAAEAAAD//wMAAgABAAEAAAAAAAMAAgABAAEAAAABAAMAAgABAAEAAAACAAMAAgAEAAEAAAACAAEAAgAEAAEAAAACAAIAAgAEAAEAAAACAAAAAgAEAAEAAAACAP//AgAEAAEAAAACAP7/AgAEAAEAAAD9/wEAAgAAAAEAAAD9/wAAAgAAAAEAAAD9////AgAAAAEAAAD9//7/AgAAAAEAAAD9//3/AgAAAAAAAAD+//3/AgABAAAAAAD///3/AgABAAAAAAAAAP3/AgABAAAAAAABAP3/AgABAAAAAAACAP3/AgAEAAAAAAD+//7/AgABAAEAAAD+////AgABAAEAAAD+/wAAAgABAAEAAAD+/wEAAgABAAEAAAD+/wIAAgABAAEAAAD///7/AgABAAEAAAD/////AgABAAEAAAD//wAAAgABAAEAAAD//wEAAgABAAEAAAD//wIAAgABAAEAAAAAAP7/AgABAAEAAAAAAP//AgABAAEAAAAAAAAAAgABAAEAAAAAAAEAAgABAAEAAAAAAAIAAgABAAEAAAABAP7/AgABAAEAAAABAP//AgABAAEAAAABAAAAAgABAAEAAAABAAEAAgABAAEAAAABAAIAAgABAAEAAAD9/wQAAgAAAAIAAAACAAQAAgAEAAIAAAD+/wQAAgADAAIAAAD//wQAAgADAAIAAAAAAAQAAgADAAIAAAABAAQAAgADAAIAAAA=")
tile_set = SubResource("TileSet_con2f")

[node name="PlayLabel Back" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = -96.0
offset_top = -131.0
offset_right = -33.0
offset_bottom = -108.0
scale = Vector2(4, 4)
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Play"
scroll_active = false

[node name="PlayLabel" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = -101.0
offset_top = -136.0
offset_right = -38.0
offset_bottom = -111.0
scale = Vector2(4, 4)
mouse_default_cursor_shape = 2
text = "Play"
scroll_active = false

[node name="OptionsLabel Back" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = -95.0
offset_top = -39.0
offset_right = -32.0
offset_bottom = -16.0
scale = Vector2(4, 4)
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Options"
scroll_active = false

[node name="OptionsLabel" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = -100.0
offset_top = -44.0
offset_right = -37.0
offset_bottom = -19.0
scale = Vector2(4, 4)
mouse_default_cursor_shape = 2
text = "Options"
scroll_active = false

[node name="ScoresLabel Back" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = -95.0
offset_top = 53.0
offset_right = -32.0
offset_bottom = 76.0
scale = Vector2(4, 4)
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Scores"
scroll_active = false

[node name="ScoresLabel" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = -100.0
offset_top = 48.0
offset_right = -37.0
offset_bottom = 73.0
scale = Vector2(4, 4)
mouse_default_cursor_shape = 2
text = "Scores"
scroll_active = false

[node name="CreditsLabel Back" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = -95.0
offset_top = 145.0
offset_right = -32.0
offset_bottom = 168.0
scale = Vector2(4, 4)
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Credits"
scroll_active = false

[node name="CreditsLabel" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = -100.0
offset_top = 140.0
offset_right = -37.0
offset_bottom = 165.0
scale = Vector2(4, 4)
mouse_default_cursor_shape = 2
text = "Credits"
scroll_active = false

[node name="Pointer" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-131, -87)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_con2f")
autoplay = "default"
frame_progress = 0.355438
script = ExtResource("3_con2f")

[node name="Audio Settings" type="TileMapLayer" parent="."]
visible = false
texture_filter = 1
position = Vector2(11, 105)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAFAP7/AAAAAAAAAAAGAP7/AAABAAAAAAAHAP7/AAABAAAAAAAIAP7/AAABAAAAAAAJAP7/AAABAAAAAAAKAP7/AAACAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAABAAAAAAAHAAAAAAABAAAAAAAIAAAAAAABAAAAAAAJAAAAAAABAAAAAAAKAAAAAAACAAAAAAA=")
tile_set = SubResource("TileSet_g3eks")

[node name="Effect Slider" type="Sprite2D" parent="Audio Settings"]
position = Vector2(95.5, 8)
scale = Vector2(1, 1.25)
texture = ExtResource("5_4ytvr")

[node name="Music Slider" type="Sprite2D" parent="Audio Settings"]
position = Vector2(95.5, -24)
scale = Vector2(1, 1.25)
texture = ExtResource("5_4ytvr")

[node name="Music Label Back" type="RichTextLabel" parent="Audio Settings"]
offset_left = 134.5
offset_top = -32.5
offset_right = 170.5
offset_bottom = -16.5
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "Music"
scroll_active = false

[node name="Music Label" type="RichTextLabel" parent="Audio Settings"]
offset_left = 134.25
offset_top = -32.75
offset_right = 170.25
offset_bottom = -16.75
theme_override_font_sizes/normal_font_size = 12
text = "Music"
scroll_active = false

[node name="Effect Label Back" type="RichTextLabel" parent="Audio Settings"]
offset_left = 135.0
offset_top = -0.5
offset_right = 175.0
offset_bottom = 15.5
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
text = "Effects"
scroll_active = false

[node name="Effect Label" type="RichTextLabel" parent="Audio Settings"]
offset_left = 134.0
offset_top = -1.5
offset_right = 174.0
offset_bottom = 14.5
theme_override_font_sizes/normal_font_size = 12
text = "Effects"
scroll_active = false

[node name="Volume Label Back" type="RichTextLabel" parent="Audio Settings"]
offset_left = 85.5
offset_top = -54.5
offset_right = 146.5
offset_bottom = -33.5
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Volume"
scroll_active = false

[node name="Volume Label" type="RichTextLabel" parent="Audio Settings"]
offset_left = 85.0
offset_top = -55.0
offset_right = 146.0
offset_bottom = -34.0
text = "Volume"
scroll_active = false

[connection signal="gui_input" from="PlayLabel" to="Pointer" method="_on_gui_input"]
[connection signal="mouse_entered" from="PlayLabel" to="Pointer" method="_on_play_label_mouse_entered"]
[connection signal="gui_input" from="OptionsLabel" to="Pointer" method="_on_gui_input"]
[connection signal="mouse_entered" from="OptionsLabel" to="Pointer" method="_on_options_label_mouse_entered"]
[connection signal="gui_input" from="ScoresLabel" to="Pointer" method="_on_gui_input"]
[connection signal="mouse_entered" from="ScoresLabel" to="Pointer" method="_on_scores_label_mouse_entered"]
[connection signal="gui_input" from="CreditsLabel" to="Pointer" method="_on_gui_input"]
[connection signal="mouse_entered" from="CreditsLabel" to="Pointer" method="_on_credits_label_mouse_entered"]
